backend/youtube-comment-analysis/src/main/java/com/example/youtube_comment_analysis/error/ChannelNotFoundException.java
package com.example.youtube_comment_analysis.error;

public class ChannelNotFoundException extends RuntimeException {
    public ChannelNotFoundException(String msg) { super(msg); }
}
